[package]
name = "nvngx"
version.workspace = true
edition = "2021"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "NVIDIA NGX bindings."
readme = "README.md"
license = "MIT"
keywords = ["nvidia", "ngx", "DLSS", "upscaling", "supersampling"]
rust-version = "1.70"
repository = "https://github.com/iddm/nvngx-rs"

[dependencies]
widestring = "1"
ash = { version = "0.38", optional = true }
log = "0.4"
uuid = { version = "1", features = ["v4"] }
derive_builder = "0.12"
nvngx-sys = { version = "0.3.0", path = "../nvngx-sys" }
regex = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common"], optional = true }

[features]
default = ["dx", "vk"]
vk = ["nvngx-sys/vk", "dep:ash"]
dx = ["nvngx-sys/dx", "dep:windows"]
